securitygroups.tf
resource "aws_security_group" "alb_security_group" {
  name_prefix            = "alb-security-group"
  description            = "Allow alb inbound traffic"
  vpc_id                 = aws_vpc.vpc.id
  revoke_rules_on_delete = true
  lifecycle {
    create_before_destroy = true
  }

  ingress {
    description = "Http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    description = "Https from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }


  tags = {
    Name = " alb security group "
  }
}

resource "aws_security_group" "ssh_security_group" {
  name_prefix            = " ssh-security-group "
  description            = "Allow ssh inbound traffic"
  vpc_id                 = aws_vpc.vpc.id
  revoke_rules_on_delete = true
  lifecycle {
    create_before_destroy = true
  }

  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.local_ip]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = " ssh security group "
  }
}


resource "aws_security_group" "webserver_security_group" {
  name_prefix            = "webserver security group "
  description            = "Allow webserver inbound traffic"
  vpc_id                 = aws_vpc.vpc.id
  revoke_rules_on_delete = true
  lifecycle {
    create_before_destroy = true
  }

  ingress {
    description     = "Http from VPC"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_security_group.id]

  }

  ingress {
    description     = "Https from VPC"
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_security_group.id]

  }

  ingress {
    description     = "ssh from VPC"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.ssh_security_group.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "webserver security group "
  }
}


resource "aws_security_group" "database_security_group" {
  name_prefix            = "database security group "
  description            = "Allow inbound traffic"
  vpc_id                 = aws_vpc.vpc.id
  revoke_rules_on_delete = true
  lifecycle {
    create_before_destroy = true
  }

  ingress {
    description     = "enable inbound on port 3306"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.webserver_security_group.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "database security group"
  }
}
